@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.32.9-Kosi004-HP_RC12SR1R-powered
-# Fri Mar 23 13:03:40 2012
+# Linux kernel version: 2.6.32.9-Kosi005-HP_RC12SR1R-powered
+# Fri Mar 23 15:26:04 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
